--- a/sm/platform/msvc2008/projects/sm.vcproj
+++ b/sm/platform/msvc2008/projects/sm.vcproj
@@ -144,32 +144,92 @@
 	<References>
 	</References>
 	<Files>
+		<Filter
+			Name="vector"
+			>
+			<File
+				RelativePath="..\..\..\src\sm\sm_c_vector.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\sm\SM_Vector.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\sm\SM_Vector.inl"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="matrix"
+			>
+			<File
+				RelativePath="..\..\..\src\sm\sm_c_matrix.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\sm\sm_c_matrix.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\sm\SM_Matrix.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\sm\SM_Matrix.inl"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="plane"
+			>
+			<File
+				RelativePath="..\..\..\src\sm\SM_Plane.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\sm\SM_Plane.inl"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="quaternion"
+			>
+			<File
+				RelativePath="..\..\..\src\sm\SM_Quaternion.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\sm\SM_Quaternion.inl"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="test"
+			>
+			<File
+				RelativePath="..\..\..\src\sm\SM_Test.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\sm\SM_Test.inl"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="utility"
+			>
+			<File
+				RelativePath="..\..\..\src\sm\sm_const.h"
+				>
+			</File>
+		</Filter>
+		<File
+			RelativePath="..\..\..\src\sm\c_wrap_sm.h"
+			>
+		</File>
 		<File
 			RelativePath="..\..\..\src\sm\sm.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\sm\sm_const.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\sm\sm_matrix.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\sm\sm_plane.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\sm\sm_quaternion.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\sm\sm_test.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\sm\sm_vector.h"
 			>
 		</File>
 	</Files>
