[CHANGED] use s2 render params
Former-commit-id: dda84d5f96b3fb794de710837a823e4d79f2d129

--- a/easyeditor/platform/msvc2008/projects/libdata.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libdata.vcproj
@@ -717,6 +717,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\source\data\sprite\SpriteIO.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\ee\SpriteIO.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\include\ee\SpriteObserver.h"
 					>
 				</File>
