--- a/sprite2/platform/msvc2008/projects/sprite2.vcproj
+++ b/sprite2/platform/msvc2008/projects/sprite2.vcproj
@@ -268,6 +268,114 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="dummy"
+				>
+				<File
+					RelativePath="..\..\..\src\sprite2\DummySprite.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="anim"
+				>
+				<File
+					RelativePath="..\..\..\src\sprite2\AnimSprite.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\sprite2\AnimSprite.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\sprite2\AnimSymbol.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\sprite2\AnimSymbol.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="particle3d"
+				>
+				<File
+					RelativePath="..\..\..\src\sprite2\Particle3dSprite.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\sprite2\Particle3dSprite.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\sprite2\Particle3dSymbol.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\sprite2\Particle3dSymbol.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="scale9"
+				>
+				<File
+					RelativePath="..\..\..\src\sprite2\Scale9Sprite.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\sprite2\Scale9Sprite.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\sprite2\Scale9Symbol.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\sprite2\Scale9Symbol.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="particle2d"
+				>
+				<File
+					RelativePath="..\..\..\src\sprite2\Particle2dSprite.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\sprite2\Particle2dSprite.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\sprite2\Particle2dSymbol.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\sprite2\Particle2dSymbol.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="text"
+				>
+				<File
+					RelativePath="..\..\..\src\sprite2\TextSprite.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\sprite2\TextSprite.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\sprite2\TextSymbol.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\sprite2\TextSymbol.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
