[ADDED] reference count
Former-commit-id: f747da40803a2d2d660f175ba70f393a215085c9

--- a/sprite2/platform/msvc2008/projects/sprite2.vcproj
+++ b/sprite2/platform/msvc2008/projects/sprite2.vcproj
@@ -377,6 +377,14 @@
 				</File>
 			</Filter>
 		</Filter>
+		<Filter
+			Name="utility"
+			>
+			<File
+				RelativePath="..\..\..\src\sprite2\Object.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
